[tool.poetry]
name = "blog-anomaly-detection"
version = "0.1.0"
description = ""
authors = ["erikmunkby <erik.munkby@gmail.com>"]
readme = "README.md"
packages = [{include = "blog_anomaly_detection"}]

[tool.poetry.dependencies]
python = "^3.10"
notebook = "^6.5.2"
pandas = "^1.5.1"
plotly = "^5.11.0"
kaleido = "0.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
